Fix border-radius being applied on one side only for aligned images

--- a/web_src/less/markup/content.less
+++ b/web_src/less/markup/content.less
@@ -310,11 +310,11 @@
   }
 
   img[align="right"] {
-    padding-left: 20px;
+    margin-left: 20px;
   }
 
   img[align="left"] {
-    padding-right: 20px;
+    margin-right: 20px;
   }
 
   .emoji {
